--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav ul li a:hover {
     font-family: 'Lora', serif;
 }
 
-/* welcome section */
+/* about */
 
 .intro {
     height: 100vh;
@@ -123,7 +123,7 @@ nav ul li a:hover {
     font-weight: 400;
     max-width: 70rem;
     line-height: 3.5rem;
-    text-align: left;
+    text-align: center;
     font-family: 'Lora', serif;
 }
 
@@ -142,6 +142,39 @@ nav ul li a:hover {
     line-height: 3.5rem;
     text-align: center;
     font-family: 'Lora', serif;
+}
+
+/* experience */
+.experience_intro {
+    height: 70vh;
+    min-height: 50rem;   
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background:  #8FBDD9;
+}
+
+.experience_text {
+    background-color: #fffefe9f;
+    color: #0378A6;
+    display: inline-block;
+    font-size: 2rem;
+    padding: 1rem 2.5rem;
+    margin: 1rem 4rem;
+    border-radius: 0.9em;
+    font-weight: 400;
+    max-width: 70rem;
+    line-height: 3.5rem;
+    text-align: center;
+    font-family: 'Lora', serif;
+    /* list-style-position: outside; */
+}
+
+
+.text-italic {
+	font-style: italic;
 }
 
 /* blog */
@@ -291,8 +324,8 @@ nav ul li a:hover {
 /* contact */
 
 .contact {
-    height: 100vh;
-    min-height: 70rem; 
+    height: 70vh;
+    min-height: 50rem; 
     background-color: white;
     display: flex;
     flex-direction: column;
