--- a/style.css
+++ b/style.css
@@ -38,9 +38,27 @@ a {
     left: 0;
     top: 0;
     width: 100%;
-    background-color: #2dc1cc;
+    background-color: #223838f8;
     min-width: 65rem;
 }
+
+/* nav ur {
+    text-align: left;
+    padding-left: 2rem;
+}
+
+nav ur li {
+    display: inline-flex;
+    margin: 1.5rem 2rem;  
+}
+
+nav ur li a {
+    color: white;
+    font-weight: 700;
+    font-family: 'Lora', serif;
+    text-transform: uppercase;
+} */
+
 
 nav ul {
     text-align: right;
@@ -60,12 +78,12 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #BACDD9;
+  color: #89aec5;
 }
 
 .section_name {
     text-transform: uppercase;
-    color: #03588C;
+    color: #0d0f0f;
     font-family: 'Lora', serif;
 }
 
@@ -79,7 +97,7 @@ nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(8, 8, 8, 0.61);
 }
 
 .intro::before {
@@ -99,9 +117,9 @@ nav ul li a:hover {
 }
 
 .photo_me {
-    width: 40%;
-    border-color: #0378A6;
-    border-width: 2rem;
+    width: 50%;
+    border-color: #223838f8;
+    border-width: 1.5rem;
     border-style: double;
     border-radius: 50%;
     margin-top: 7,5rem;
@@ -113,7 +131,7 @@ nav ul li a:hover {
 }
 
 .intro_text {
-    background-color: #0378A6;
+    background-color: #223838f8;
     color: white;
     display: inline-block;
     font-size: 2rem;
@@ -133,7 +151,7 @@ nav ul li a:hover {
 
 .skill_details {
     margin: 0rem;
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-size: 2rem;
     margin: 1rem 3rem;
     display: inline-block;
@@ -153,12 +171,12 @@ nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background:  #8FBDD9;
+    background:  #ffffff;
 }
 
 .experience_text {
-    background-color: #fffefe9f;
-    color: #0378A6;
+    background-color: #fbffff;
+    color: #204747;
     display: inline-block;
     font-size: 2rem;
     padding: 1rem 2.5rem;
@@ -184,9 +202,9 @@ nav ul li a:hover {
     height: 130vh;
     min-height: 80rem;
     */
-    background-color: white;
+    background-color: #417579ab;
     width: 100%;
-    color: #0378A6;
+    color: #0f1213;
     overflow: scroll;
     display: block;
     display: flex;
@@ -216,18 +234,18 @@ nav ul li a:hover {
 }
 
 .blogpost_tile a {
-    color: #0378A6;
+    color: #0a0a0a;
 }
 
 .blogpost_tile a:visited {
-    color: #3E768C;
+    color: #0d0d0e;
 }
 
 .blogpost_tile:hover {
-    background: #BACDD9;
+    background: #c4ccd1;
     border-style: solid;
     border-width: 0;
-    border-color: #BACDD9;
+    border-color: #1b3031;
     border-radius: 1rem;
 }
 
@@ -256,9 +274,9 @@ nav ul li a:hover {
     height: 195vh;
     min-height: 80rem;
     */
-    background-color: #8FBDD9;
+    background-color: #ffffff;
     overflow: scroll;
-    color: white;
+    color: rgb(38, 58, 54);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -281,7 +299,7 @@ nav ul li a:hover {
     width: 30rem;
     margin: 0 1rem;
     border-style: solid;
-    border-color: white;
+    border-color: rgba(7, 7, 7, 0.253);
     border-width: 0.1rem;
     border-radius: 0.5rem;
 }
@@ -304,15 +322,15 @@ nav ul li a:hover {
 }
 
 .project_links a:hover {
-    background: #BACDD9;
+    background: #bad9d9;
     border-style: solid;
     border-width: 0;
-    border-color: #BACDD9;
+    border-color: #bccccf;
     border-radius: 0.5rem;
 }
 
 .project_links a {
-    color: #A65903;
+    color: #cc7d07;
     margin: 0 2rem;
     text-decoration: underline;
 }
@@ -326,7 +344,7 @@ nav ul li a:hover {
 .contact {
     height: 100vh;
     min-height: 50rem; 
-    background-color: white;
+    background-color: #417579ab;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -352,7 +370,7 @@ nav ul li a:hover {
 }
 
 .contact_desc {
-    color: #0378A6;
+    color: #022f31;
     font-size: 2.4rem;
     margin: 0 6rem;
     display: inline-block;
@@ -364,7 +382,7 @@ nav ul li a:hover {
 }
 
 .desc a {
-    color: #0378A6;
+    color: rgb(20, 27, 26);
 }
 
 /* for mobile phones */
